# bayes-project-1

./: .RData  .Rhistory  .gitignore  README.md  main.py  pyproject.toml  schools.data.R  simple.Rmd
R version/: __init__.R  main.Rmd  main_R.R  main_seq.R  results.R
data/: convert.R  data.json  init1.R  init1.json  init2.R  init2.json  to_json.sh
mcmc/: __init__.py  data.py  mcmc.py  utils.py
report/: Makefile  main.tex  references.bib  results.csv
report/sections/: conclusion.tex  echantillonneur.tex  introduction.tex  justifications.tex  modèle et résultats.tex  output.tex
