[tool.poetry]
name = "mcmc"
version = "0.1.0"
description = ""
authors = ["Charles MIRANDA", "Armand ROUYRRE", "Aymard SAHNOUNE", "Vincent SEVESTRE"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "matplotlib"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
