[tool.poetry]
name = "mcmc"
version = "0.1.0"
description = ""
authors = ["Charles MIRANDA", "Armand ROUYRRE", "Aymard SAHNOUNE", "Vincent SEVESTRE"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "matplotlib"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
